# intel-npu-acceleration-library

./: .buildinfo  .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  adding_operations.html  bandit.yaml  cpp_reference.html  dev_requirements.txt  developer.html  genindex.html  how_it_works.html  index.html  llm.html  llm_performance.html  mypy.ini  npu.html  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.html  setup.py  usage.html
.doctrees/: adding_operations.doctree  cpp_reference.doctree  developer.doctree  environment.pickle  how_it_works.doctree  index.doctree  llm.doctree  llm_performance.doctree  npu.doctree  setup.doctree  usage.doctree
.doctrees/python/: intel_npu_acceleration_library.backend.doctree  intel_npu_acceleration_library.doctree  intel_npu_acceleration_library.functional.doctree  intel_npu_acceleration_library.nn.doctree  modules.doctree
.githooks/: check-license.py
.github/workflows/: documentation.yml  style.yml  test.yml
_sources/: cpp_reference.rst  how_it_works.md  index.rst  llm.md  npu.md
_sources/python/: intel_npu_acceleration_library.backend.rst  intel_npu_acceleration_library.functional.rst  intel_npu_acceleration_library.rst  modules.rst
docs/: Doxyfile  build_doc.py
docs/source/: adding_operations.md  conf.py  developer.md  index.rst  llm_performance.md  setup.md  usage.md
docs/source/python/: intel_npu_acceleration_library.nn.rst  intel_npu_acceleration_library.rst
examples/: Audio-Spectrogram-Transformer.py  NPU compilation tutorial.ipynb  compile_model.py  llama.py  llama3.py  llama3_token_per_second.py  llava.py  matmul.py  model_compilation_demo.ipynb  phi-2.py  phi-3-nc.py  phi-3.py  qwen2_math_7b.py  t5.py  tiny_llama_chat.py  train_mnist.py
examples/cpp/: CMakeLists.txt  README.md  main.cpp
include/intel_npu_acceleration_library/: common.h  conversion.h  inference.h  nn_factory.h  parameters.h  tensor.h
intel_npu_acceleration_library/: __init__.py  _version.py  activations.py  compiler.py  device.py  dtypes.py  modelling.py  optimizations.py  quantization.py
intel_npu_acceleration_library/backend/: __init__.py  base.py  bindings.py  compression.py  convolution.py  factory.py  linear.py  matmul.py  mlp.py  ops.py  qlinear.py  qmatmul.py  runtime.py  sdpa.py  tensor.py  utils.py
intel_npu_acceleration_library/functional/: __init__.py  scaled_dot_product_attention.py
intel_npu_acceleration_library/nn/: __init__.py  autograd.py  conv.py  functional.py  linear.py  llm.py  module.py
licensing/: dev-third-party-programs.txt  documentation-third-party-programs.txt  third-party-programs.txt
python/: intel_npu_acceleration_library.backend.html  intel_npu_acceleration_library.functional.html  intel_npu_acceleration_library.html  intel_npu_acceleration_library.nn.html  modules.html
script/: export.py  gen_leaderboard_doc.py  llm_leaderboard.py  profile_llm.py  profile_matmul.py  profile_mlp.py  quantize_model.py
script/HFModelsInference/: .gitignore  RunHFModelsIntelNPU.ipynb  TestConfigNPU.toml  requirements.txt
src/: bindings.cpp
test/python/: conftest.py  test_basic.py  test_bindings.py  test_compile.py  test_conv.py  test_device.py  test_dtypes.py  test_factory.py  test_layers.py  test_llm.py  test_matmul.py  test_module.py  test_op.py  test_optimizations.py  test_profiling.py  test_quantization.py  test_sdpa.py  test_tensor.py  test_training.py
